模型都要重新设计。是不是loss只计算最后一个预测值。

--- a/jupyterlab/Model_LSTM1.ipynb
+++ b/jupyterlab/Model_LSTM1.ipynb
@@ -136,7 +136,7 @@
     "TIME_STEP = SEQ_LENGTH                                        # 一般这个单独设定，这里为了简单，还是直接就等于seq_len的方便。其实也就是等于最长的那个sequence length\n",
     "INPUT_SIZE = dataset.shape[1]-1\n",
     "HIDDEN_SIZE = 256\n",
-    "NUM_LAYERS = 1\n",
+    "NUM_LAYERS = 2\n",
     "\n",
     "np.random.seed(3)\n",
     "torch.manual_seed(3)\n",
@@ -147,15 +147,12 @@
     "        super().__init__()\n",
     "        self.linear_1 = nn.Linear(input_size, hidden_layer_size)\n",
     "        self.relu = nn.ReLU()\n",
-    "        self.lstm1 = nn.LSTM(input_size=hidden_layer_size, hidden_size=int(hidden_layer_size/2), num_layers=num_layers, batch_first=True)\n",
-    "        self.lstm2 = nn.LSTM(input_size=int(hidden_layer_size/2), hidden_size=hidden_layer_size, num_layers=num_layers, batch_first=True)\n",
+    "        self.lstm = nn.LSTM(input_size=hidden_layer_size, hidden_size=hidden_layer_size, num_layers=num_layers, batch_first=True, dropout=dropout)\n",
     "        self.dropout = nn.Dropout(dropout)\n",
     "        self.linear_2 = nn.Linear(hidden_layer_size, output_size)\n",
     "\n",
-    "        self.h1 = torch.zeros(NUM_LAYERS, BATCH_SIZE, int(hidden_layer_size/2)).double().to(device)\n",
-    "        self.c1 = torch.zeros(NUM_LAYERS, BATCH_SIZE, int(hidden_layer_size/2)).double().to(device)\n",
-    "        self.h2 = torch.zeros(NUM_LAYERS, BATCH_SIZE, hidden_layer_size).double().to(device)\n",
-    "        self.c2 = torch.zeros(NUM_LAYERS, BATCH_SIZE, hidden_layer_size).double().to(device)\n",
+    "        self.h0 = torch.zeros(NUM_LAYERS, BATCH_SIZE, hidden_layer_size).double().to(device)\n",
+    "        self.c0 = torch.zeros(NUM_LAYERS, BATCH_SIZE, hidden_layer_size).double().to(device)\n",
     "        \n",
     "        self.init_weights3()\n",
     "\n",
@@ -178,14 +175,7 @@
     "                nn.init.kaiming_normal_(param)    \n",
     "    \n",
     "    def init_weights3(self):\n",
-    "        for name, param in self.lstm1.named_parameters():\n",
-    "            if 'bias' in name:\n",
-    "                nn.init.constant_(param, 0.0)\n",
-    "            elif 'weight_ih' in name:\n",
-    "                nn.init.orthogonal_(param)\n",
-    "            elif 'weight_hh' in name:\n",
-    "                nn.init.orthogonal_(param)\n",
-    "        for name, param in self.lstm2.named_parameters():\n",
+    "        for name, param in self.lstm.named_parameters():\n",
     "            if 'bias' in name:\n",
     "                nn.init.constant_(param, 0.0)\n",
     "            elif 'weight_ih' in name:\n",
@@ -208,8 +198,7 @@
     "        # LSTM layer\n",
     "        # lstm_out, (h_n, c_n) = self.lstm(x, (self.h0.detach(), self.c0.detach()))\n",
     "        \n",
-    "        lstm1_out, (h1_n, c1_n) = self.lstm1(x, (self.h1, self.c1))\n",
-    "        lstm_out, (h_n, c_n) = self.lstm2(lstm1_out, (self.h2, self.c2))\n",
+    "        lstm_out, (h_n, c_n) = self.lstm2(x, (self.h0, self.c0))\n",
     "\n",
     "        lstm_out = self.dropout(lstm_out)\n",
     "        \n",
